--- a/autoservice-app/requirements.txt
+++ b/autoservice-app/requirements.txt
@@ -1,5 +1,14 @@
-fastapi
-uvicorn[standard]
+Flask==2.3.3
+Werkzeug==2.3.7
+Jinja2==3.1.6
+click==8.1.7
+itsdangerous==2.1.2
+blinker==1.7.0
+Flask-SQLAlchemy==3.0.5
+Flask-WTF==1.2.1
+Flask-Login==0.6.2
 psycopg2-binary
-pydantic
-python-dotenv
+python-dotenv==1.0.0
+
+gunicorn==22.0.0
+cryptography==41.0.7
