modified:   autoservice-app/.env 	modified:   autoservice-app/test_auth.py

--- a/autoservice-app/.env
+++ b/autoservice-app/.env
@@ -5,6 +5,19 @@ DB_USER=postgres
 DB_PASSWORD=admin
 
 
-DATABASE_URL=postgresql://postgres:admin@localhost:5432/radik
 FLASK_SECRET=secure_salt_123
 FLASK_ENV=development
+
+# Настройки Flask
+SECRET_KEY=tutturu123@@
+FLASK_APP=app
+DATABASE_URL=postgresql://postgres:postgres@db:5432/autoservice
+
+# Настройки PostgreSQL
+POSTGRES_DB=autoservice
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+
+# Настройки PgAdmin
+PGADMIN_DEFAULT_EMAIL=admin@autoservice.com
+PGADMIN_DEFAULT_PASSWORD=admin123
